web client configuration and get user details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=shopping-cart
 server.servlet.context-path=/api/v1
+user.service.url=https://dreamy-delights-auth.onrender.com/api/v1/user/username/
 jwt.secret=1234
 
 # Database connection properties
